<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"

    android:background="@android:color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"

        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/mainlayout"
        android:orientation="vertical">

        <Button
            android:id="@+id/toalbums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fields"
            android:fontFamily="cursive"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/albums"
            android:textAllCaps="false"
            android:textSize="19sp" />

        <Button
            android:id="@+id/tomusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fields"
            android:fontFamily="cursive"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/Music"
            android:textAllCaps="false"

            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/toplayingsong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fields"
            android:fontFamily="cursive"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/now"
            android:textAllCaps="false"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>



    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/settings"
        android:src="@android:drawable/ic_menu_slideshow"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mainlayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

android:backgroundTint="@android:color/black"
        android:alpha="0.2"
        android:onClick="settings"
       android:padding="80dp"


        android:scaleType="fitCenter"

    />


</RelativeLayout>